website-source/_shared/css/brand.css
/* ... */
*:focus-visible {
    outline: var(--rs-outline);
    outline-offset: 2px;
}

/* footer *::selection {
    background-color: var(--rs-colour-yellow);
    color: var(--rs-colour-ec-dark-blue);
}

footer *:focus-visible {
    outline: var(--rs-outline-reverse);
} */
p {
    max-width: 75ch;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 100;
    text-wrap: balance;
}

h1 {
    font-size: var(--font-size-5);
    padding-block-start: var(--space-xs);
    margin-block-start: var(--space-3xs);
    /* margin-block-end: var(--space-l); */
}

h2 {
    font-size: var(--font-size-3);
    margin-block-start: 0;
    padding-block-start: var(--space-l);
    padding-block-end: var(--space-s);
    margin-block-end: var(--space-m);
    border-block-end: 1px dotted white;
}

h3 {
    font-size: var(--font-size-1);
    font-weight: 400;
}


h4 {
    font-size: var(--font-size-1);
    text-transform: capitalize;
}

a {
    color: var(--rs-colour-link);
    text-underline-offset: 4px;
    text-decoration-thickness: 2px;
}

a:visited {
    color: var(--rs-colour-link);
    text-decoration: underline dotted;
    text-decoration-color: var(--rs-colour-link-visited);
}

a[target="_blank"] {
    position: relative;
}

a[target="_blank"]::after {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    vertical-align: text-top;
    background-image: url(../images/icons/icon-new-window.svg);
    background-size: cover;
    background-repeat: no-repeat;
    margin-inline-start: 3px;
    margin-inline-end: 5px;
}

a[href^="#"] {
    position: relative;
}

a[href^="#"]::after {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    vertical-align: text-top;
    background-image: url(../images/icons/icon-arrow-down.svg);
    background-size: cover;
    background-repeat: no-repeat;
    margin-inline-start: 3px;
    margin-inline-end: 5px;
}

/*
.##.....##.########.####.##.......####.########.####.########..######.
.##.....##....##.....##..##........##.....##.....##..##.......##....##
.##.....##....##.....##..##........##.....##.....##..##.......##......
.##.....##....##.....##..##........##.....##.....##..######....######.
.##.....##....##.....##..##........##.....##.....##..##.............##
.##.....##....##.....##..##........##.....##.....##..##.......##....##
..#######.....##....####.########.####....##....####.########..######.
*/

.rs-colour-lowlight {
    background-color: var(--rs-colour-bg-shade);
}

.rs-colour-text-highlight-shade {
    background-color: var(--rs-colour-highlight);
    color: var(--rs-colour-bg-shade);
}

.rs-colour-instruction {
    color: var(--rs-colour-instruction);
}

.visually-hidden:not(:focus):not(:active) {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

.flow>*+* {
    margin-block-start: var(--flow-space, 1em);
}

/* Change this to line height? */
svg:not([width]):not([height]) {
    height: 1.5ex;
    width: auto;
}

/* svg:not([width]):not([height]).rs-logo {
    color: var(--rs-colour-logo);
    height: auto;
    width: 100%;
    max-width: var(--rs-width-max-logo);
} */

.rs-relative {
    position: relative;
}

@media not (scripting: enabled) {
    .rs-needs-js {
        display: none;
    }
}

.rs-button-unset {
    all: unset;
}

.rs-button-unset:focus-visible {
    outline: var(--rs-outline);
}

@media screen and (min-width: 1200px) and (max-width:1700px) {}

/*
 ######  ##    ## #### ########
##    ## ##   ##   ##  ##     ##
##       ##  ##    ##  ##     ##
 ######  #####     ##  ########
      ## ##  ##    ##  ##
##    ## ##   ##   ##  ##
 ######  ##    ## #### ##
*/

.rs-skip {
    text-align: center;
    background-color: white;
    display: grid;
    position: relative;
    grid-template-rows: 0fr;
    transition: grid-template-rows 0.25s ease-in-out;
}

.rs-skip:focus-within {
    grid-template-rows: 1fr;
}

.rs-skip>p {
    overflow: hidden;
    margin: 0;
}

.rs-skip>p>a {
    display: inline-block;
    padding-block: 1rem;
}

.rs-skip::after {
    content: "";
    width: 0px;
    height: 0px;
    border-style: solid;
    border-width: var(--space-2xs) var(--space-2xs) 0 var(--space-2xs);
    border-color: white transparent transparent transparent;
    position: absolute;
    left: 50%;
    bottom: calc(var(--space-2xs) * -1);
    transform: translateX(-50%);
    pointer-events: none;
    opacity: 0;
}

.rs-skip:focus-within::after {
    opacity: 1;
}


/*
##        #######   ######    #######
##       ##     ## ##    ##  ##     ##
##       ##     ## ##        ##     ##
##       ##     ## ##   #### ##     ##
##       ##     ## ##    ##  ##     ##
##       ##     ## ##    ##  ##     ##
########  #######   ######    #######
*/

.rs-logo-container {
    position: relative;
    /* height: clamp(16.75rem, 13.5655vw + 13.6978rem, 27.56rem); */
    height: 40vh;
    background: rgb(237, 250, 255);
    background-image: radial-gradient(circle at bottom left, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 40%), linear-gradient(0deg, var(--rs-colour-sky-bottom) 0%, var(--rs-colour-sky-top) 100%);
    background-repeat: no-repeat, no-repeat;
    border-block-end: 16px solid var(--rs-colour-bg-shade);
}

.rs-logo {
    position: absolute;
    left: var(--rs-layout-left-shift);
    bottom: min(2.5vw, 70px);
    display: block;
    width: clamp(9.375rem, 7.4627vw + 7.6959rem, 15.625rem) !important;
    height: auto !important;
    max-width: 250px !important;
}

@media screen and (min-width: 980px) {
    .rs-logo {
        left: var(--rs-layout-left-shift-scale);
    }
}

.rs-logo>svg {
    width: 100% !important;
    height: auto !important;
    fill: var(--rs-colour-logo-stroke);
}

.rs-logo>svg #rs-logo-cloud {
    fill: var(--rs-colour-logo-fill);
    stroke: var(--rs-colour-logo-stroke);
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 7px
}
/* ... */

